--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     {
       "email": "jared@upstatement.com",
       "name": "jarednova"
-    }  
+    }
   ],
   "repositories": [
     {
@@ -19,6 +19,7 @@
 	  "timber/timber": "1.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.16|6.*"
+    "phpunit/phpunit": "5.7.16|6.*",
+    "squizlabs/php_codesniffer": "^3.6"
   }
 }
