--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,11 @@
       "url": "https://wpackagist.org"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "App\\": "inc/"
+    }
+  },
   "require": {
 	  "timber/timber": "1.*"
   },
