--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,6 @@
     "postcss.config.js"
   ],
   "rules": {
-    "import/no-extraneous-dependencies": false
+    "import/no-extraneous-dependencies": 0
   }
 }
