--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     }
   },
   "require": {
-	  "timber/timber": "1.*"
+	  "timber/timber": "1.*",
+    "symfony/string": "^5.2"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.16|6.*",
